    and rename it 16-xaa-fbcomposite-fix-negative-size.diff as it's now
    applied in Debian as well. It fixes arithmetic bugs in mod(), which
    could lead to X crashes/exploits when XAA and compositing are used;
    thanks to Bryce Harrington.
  * Merge 'xsfbs/debian-unstable' to fix target dependencies, which fixes
    useless rebuilds.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 05 Apr 2010 20:25:26 +0200

xorg-server (2:1.7.6-2) unstable; urgency=low

  [ Timo Aaltonen ]
  * Add 08-config-xorg-conf-d.diff, 09-inputclass-sans-abi9.diff,
    10-config-libudev-backend.diff. Backport xorg.conf.d, inputclass
    and libudev support from xserver 1.8. Replaces the patches we had
    before. This allows us to migrate from a temporary udev based
    input device configuration straight to the long term solution
    introduced in 1.8.
  * Add 11-xfree86-fix-video-fallback.diff from SUSE. Allows the video
    fallback method to work when there's an xorg.conf around.
  * Add 12-xfree86-dont-complain-about-missing-coredevices.diff.
    No reason to complain about these, unless AEI is off.
  * Add 13-unbreak-input-abi.diff. Keep the old NewInputDeviceRequest(),
    rename the new as NIDR18() and call it from NIDR(). This way we
    don't break the input ABI.
  * Add 14-tone-down-nidr-errors.diff. Use X_INFO instead of X_ERROR.

  [ Julien Cristau ]
  * 15-keep-udev-x11-driver.diff: keep looking for the x11_driver udev
    property as a transitional measure.  This should allow the new server to
    work while drivers aren't transitioned to xorg.conf.d yet.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 30 Mar 2010 21:32:52 +0300

xorg-server (2:1.7.6-1) unstable; urgency=low

  [ Brice Goglin ]
  * Add 06_dont_trap_access_to_timer_and_keyboard.diff,
    thanks Samuel Thibault.

  [ Timo Aaltonen ]
  * New upstream release, closes: #574354.

  [ Julien Cristau ]
  * Don't build xserver-xorg-core-udeb on sparc.  The linker fails because